[tool.poetry]
name = "pubsub_example"
version = "0.1.0"
description = "Just some pubsub examples"
authors = ["Sean Davis <seandavi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
elasticsearch = "^7.0"
google-cloud-storage = "^1.16"
google-cloud-pubsub = "^0.42.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
